--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ a{color: unset; text-decoration: none;}
 .testimony-container .testimony-text{padding: 10px 80px;}
 
 
-
+.location{padding: 30px 80px;}
 
 
 
