--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,3 +122,30 @@ a{color: unset; text-decoration: none;}
 /* .company-profile .project-card{margin: 30px 10xp !important;} */
 .project-btn{padding: 15px 50px;}
 
+
+/* agent archive page  */
+
+
+
+/* property description page  */
+.est-progress-bar{background-color: #29BDBC; position: relative;}
+.est-progress{position: relative;}
+.est-progress::after{position: absolute; content:"";width: 25px; height: 25px; background-color: #CDCDCD ; border-radius: 50%; right: 0; }
+.desc-img-container{background-color: #2D2D2D; position: relative;}
+.desc-img-container .property-desc-bg{position: relative; padding: 80px 100px;}
+.desc-img-container .property-desc-bg .middle-img{padding: 50px; position: relative; z-index: 1;}
+.desc-img-container .property-desc-bg .middle-img img{border-radius: 20px;}
+.desc-img-container .property-desc-bg .top-img img{position: absolute; top: 0; right: 0;}
+.desc-img-container .property-desc-bg .bottom-img img{position: absolute; bottom: 0; left: 0;}
+.property-card-container .property-box{background: #F3F3F3;box-shadow: -10px -10px 20px #ffffff, 10px 10px 20px rgb(0 0 0 / 9%);border-radius: 20px;padding: 10px;border: none; margin: 0px 10px;}
+.property-box .prt-card-img{position: relative;}
+.property-box .prt-card-img img{filter: brightness(.7); border-radius: 20px;}
+.property-box .prt-card-img .ptr-card-text{text-align: center; position: absolute; top: 50%; transform: translateY(-50%); left: 70px;}
+/* .prt-card-img .card-img-top{background: url('../images/slider1.jpg'); height: 80px; position: relative;} */
+.property-box .prt-card-img .ptr-card-text h1{font-size: 50px; font-weight: 700; color: #ffff;}
+.ptr-image-slider .ptr-slide-img img{ border-radius: 20px;}
+.ptr-image-slider .ptr-slide-img { padding: 80px 100px;}
+.ptr-slide-control .img-control{height: 120px; width: 120px;   position: relative;  border-radius: 50%;background: #F3F3F3;box-shadow: -20px -20px 50px #FFFFFF, 20px 20px 50px #D2D2D2;border-radius: 49.5px;transform: matrix(1, 0, 0, -1, 0, 0);}
+.ptr-slide-control .slide-icon{height: 100px; width: 100px; background-color: red;  background: url('../images/andheriWest.jpg'); background-size: cover; border-radius:50% 50% 50% 50%;position: absolute;top: 0;left: 0;transform: translate(10px, 10px);}
+
+
