--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,15 @@ a{color: unset; text-decoration: none;}
 .property-box .prt-card-img .ptr-card-text h1{font-size: 50px; font-weight: 700; color: #ffff;}
 .ptr-image-slider .ptr-slide-img img{ border-radius: 20px;}
 .ptr-image-slider .ptr-slide-img { padding: 80px 100px;}
-.ptr-slide-control .img-control{height: 120px; width: 120px;   position: relative;  border-radius: 50%;background: #F3F3F3;box-shadow: -20px -20px 50px #FFFFFF, 20px 20px 50px #D2D2D2;border-radius: 49.5px;transform: matrix(1, 0, 0, -1, 0, 0);}
-.ptr-slide-control .slide-icon{height: 100px; width: 100px; background-color: red;  background: url('../images/andheriWest.jpg'); background-size: cover; border-radius:50% 50% 50% 50%;position: absolute;top: 0;left: 0;transform: translate(10px, 10px);}
+.ptr-slide-control .img-control{height: 120px; width: 120px; overflow: hidden;   position: relative; border-radius: 50%;  background: #F3F3F3;box-shadow: -20px -20px 50px #FFFFFF, 20px 20px 50px #D2D2D2; transform: matrix(1, 0, 0, -1, 0, 0); margin: 0px 15px; border:8px solid #F3F3F3; transition:0.3s ease linear;}
+.ptr-slide-control .img-control.active{height: 150px; width: 100px; overflow: hidden; padding: 8px;  position: relative; border-radius: 20px;  background: #F3F3F3;box-shadow: -20px -20px 50px #FFFFFF, 20px 20px 50px #D2D2D2; transform: matrix(1, 0, 0, -1, 0, 0); margin: 0px 15px; transition:0.3s ease linear;}
+.ptr-slide-control .img-control:hover{height: 150px; width: 100px; overflow: hidden; padding: 8px;  position: relative; border-radius: 20px;  background: #F3F3F3;box-shadow: -20px -20px 50px #FFFFFF, 20px 20px 50px #D2D2D2; transform: matrix(1, 0, 0, -1, 0, 0); margin: 0px 15px; transition:0.3s ease linear;}
+
+
+.ptr-slide-control .slide-icon img{height: 200px; width: 200px; background-size: cover; position: absolute;top: 0;left: 0; transform: rotate(180deg); transition: cubic-bezier(0.175, 0.885, 0.32, 1.275);}
+.review-container .review-points .circle{height: 30px; width: 30px; background-color: #12B7B6; margin: 10px; border-radius: 50%;}
+.review-container .review-points .grey{ background-color: #E3E3E3; }
+.review-container .review-points .half{ background-image:  linear-gradient(to right, #12B7B6 50% , #E3E3E3 50%); }
+
 
 
