--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 .banner-img{width: 100%;height: 718px; background: url('../images/banner.jpg');}
 .wrapper .banner{padding: 40px 60px;}
 
-.banner h5{font-family: 'Lora';font-style: normal;font-weight: 400;font-size: 50px;line-height: 141.9%;/* or 77px */color: #434343; margin: 80px 0px;}
+.banner h5{font-family: 'Lora';font-style: normal;font-weight: 400;font-size: 40px;line-height: 141.9%;/* or 77px */color: #434343; margin: 80px 0px;}
 
 a{color: unset; text-decoration: none;}
 
@@ -100,10 +100,13 @@ a{color: unset; text-decoration: none;}
 .img-container .img-bg img{background-repeat: no-repeat; background-size: cover;}
 .img-container .img-bg{position: relative;}
 .img-container .overlay .container-text{padding: 80px; width: 50%; position: absolute; top: 0; left: 0; height: 100%; background-color: #1F1F1F; color: #ffff; opacity: .9;}
+.img-container .img img{filter: brightness(0.7);}
+.image-slide-container .img .bottom-text{position: absolute; bottom: 0; color: #ffff;}
+.image-slide-container .img-2 img{filter: brightness(0.5);}
 
 .sm-form{padding: 40px 100px;}
 .sm-form .est-input{padding: 20px 25px; background: #F3F3F3; box-shadow: inset -10px -10px 20px #FFFFFF, inset 10px 10px 20px rgba(0, 0, 0, 0.09); border-radius: 10px; color: #434343; border: none;}
-.sm-form .input-btn{border-radius: 10px !important;}
+.sm-form .input-btn{border-radius: 10px !important; }
 
 /* developer page  */
 
@@ -157,3 +160,10 @@ a{color: unset; text-decoration: none;}
 
 
 #chartdiv {width: 100%; height: 500px;}
+
+
+
+
+
+/* slider 1  */
+
